crates/cuda-macros/tests/pass/kernels/file_helper.rs
// SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

pub const FILE_HELPER: u32 = 2;
